--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,5 +1,5 @@
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
-fos_user:
+fos_user_bundle:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
